--- a/kimujung/tmp_1.ipynb
+++ b/kimujung/tmp_1.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -186,9 +186,155 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>msno</th>\n",
+       "      <th>city</th>\n",
+       "      <th>bd</th>\n",
+       "      <th>gender</th>\n",
+       "      <th>registered_via</th>\n",
+       "      <th>registration_init_time</th>\n",
+       "      <th>is_churn</th>\n",
+       "      <th>is_back</th>\n",
+       "      <th>payment_plan_sum</th>\n",
+       "      <th>plan_list_price</th>\n",
+       "      <th>...</th>\n",
+       "      <th>transaction_count</th>\n",
+       "      <th>num_25</th>\n",
+       "      <th>num_50</th>\n",
+       "      <th>num_75</th>\n",
+       "      <th>num_985</th>\n",
+       "      <th>num_100</th>\n",
+       "      <th>num_unq</th>\n",
+       "      <th>total_secs</th>\n",
+       "      <th>log_start</th>\n",
+       "      <th>log_end</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>94959</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>7</td>\n",
+       "      <td>20110914</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>870</td>\n",
+       "      <td>3981</td>\n",
+       "      <td>...</td>\n",
+       "      <td>30</td>\n",
+       "      <td>11509</td>\n",
+       "      <td>1551</td>\n",
+       "      <td>1074</td>\n",
+       "      <td>1030</td>\n",
+       "      <td>26891</td>\n",
+       "      <td>29141</td>\n",
+       "      <td>7395726.684</td>\n",
+       "      <td>20150101</td>\n",
+       "      <td>20170331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>6597367</td>\n",
+       "      <td>4</td>\n",
+       "      <td>30</td>\n",
+       "      <td>male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20110916</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>603</td>\n",
+       "      <td>2980</td>\n",
+       "      <td>...</td>\n",
+       "      <td>21</td>\n",
+       "      <td>77</td>\n",
+       "      <td>22</td>\n",
+       "      <td>16</td>\n",
+       "      <td>44</td>\n",
+       "      <td>658</td>\n",
+       "      <td>287</td>\n",
+       "      <td>171508.646</td>\n",
+       "      <td>20150209</td>\n",
+       "      <td>20170331</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3629318</td>\n",
+       "      <td>5</td>\n",
+       "      <td>34</td>\n",
+       "      <td>male</td>\n",
+       "      <td>9</td>\n",
+       "      <td>20110916</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0</td>\n",
+       "      <td>360</td>\n",
+       "      <td>1072</td>\n",
+       "      <td>...</td>\n",
+       "      <td>2</td>\n",
+       "      <td>145</td>\n",
+       "      <td>84</td>\n",
+       "      <td>58</td>\n",
+       "      <td>42</td>\n",
+       "      <td>1678</td>\n",
+       "      <td>1158</td>\n",
+       "      <td>448313.054</td>\n",
+       "      <td>20160822</td>\n",
+       "      <td>20170330</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>3 rows × 25 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      msno  city  bd gender  registered_via  registration_init_time  is_churn  \\\n",
+       "0    94959     1   0    NaN               7                20110914         0   \n",
+       "1  6597367     4  30   male               9                20110916         0   \n",
+       "2  3629318     5  34   male               9                20110916         1   \n",
+       "\n",
+       "   is_back  payment_plan_sum  plan_list_price  ...  transaction_count  num_25  \\\n",
+       "0        0               870             3981  ...                 30   11509   \n",
+       "1        0               603             2980  ...                 21      77   \n",
+       "2        0               360             1072  ...                  2     145   \n",
+       "\n",
+       "   num_50  num_75  num_985  num_100  num_unq   total_secs  log_start   log_end  \n",
+       "0    1551    1074     1030    26891    29141  7395726.684   20150101  20170331  \n",
+       "1      22      16       44      658      287   171508.646   20150209  20170331  \n",
+       "2      84      58       42     1678     1158   448313.054   20160822  20170330  \n",
+       "\n",
+       "[3 rows x 25 columns]"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "data_dir = 'D:\\\\study\\\\sknetworks\\\\team_project\\\\sk_2nd\\\\data\\\\'\n",
     "df = pd.read_csv(data_dir + \"kkbox_data_total.csv\")\n",
@@ -243,7 +389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +403,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -333,7 +479,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -348,9 +494,44 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['msno', 'city', 'bd', 'gender', 'registered_via',\n",
+       "       'registration_init_time', 'is_churn', 'is_back', 'payment_plan_sum',\n",
+       "       'plan_list_price', 'actual_amount_paid', 'discount_rate',\n",
+       "       'is_auto_renew', 'membership_expire_date', 'is_cancel',\n",
+       "       'transaction_count', 'num_25', 'num_50', 'num_75', 'num_985', 'num_100',\n",
+       "       'num_unq', 'total_secs', 'log_start', 'log_end'],\n",
+       "      dtype='object')"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.columns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "KNN 모델 정확도: 0.5051879158424744\n"
+     ]
+    }
+   ],
    "source": [
     "train_data = df[~df['gender'].isna()]\n",
     "X_train, X_test, y_train, y_test = train_test_split(train_data.drop('gender',axis=1), train_data['gender'], test_size=0.3, random_state=42)\n",
@@ -381,9 +562,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "훈련 스코어: 1.0\n",
+      "테스트 스코어: 0.5516878632985825\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
@@ -395,12 +585,12 @@
     "gender_unknown = df[df['gender'].isna()].copy()  # 경고 방지를 위해 복사본 사용\n",
     "\n",
     "\n",
-    "features = ['city', 'bd', 'registered_via', 'is_churn', 'is_back', 'payment_plan_sum', 'plan_list_price', \n",
-    "            'actual_amount_paid', 'discount_rate', 'is_auto_renew', 'is_cancel', 'transaction_count',\n",
-    "            'num_25', 'num_50', 'num_75', 'num_985', 'num_100', 'num_unq', 'total_secs',\n",
-    "            'registration_init_time_year', 'registration_init_time_month', 'registration_init_time_day',\n",
-    "            'membership_expire_date_year', 'membership_expire_date_month', 'membership_expire_date_day',\n",
-    "            'log_end_year', 'log_end_month', 'log_end_day', 'log_start_year', 'log_start_month', 'log_start_day']\n",
+    "features = ['city', 'bd', 'registered_via',\n",
+    "       'registration_init_time', 'is_churn', 'is_back', 'payment_plan_sum',\n",
+    "       'plan_list_price', 'actual_amount_paid', 'discount_rate',\n",
+    "       'is_auto_renew', 'membership_expire_date', 'is_cancel',\n",
+    "       'transaction_count', 'num_25', 'num_50', 'num_75', 'num_985', 'num_100',\n",
+    "       'num_unq', 'total_secs', 'log_start', 'log_end']\n",
     "\n",
     "X = gender_known[features]\n",
     "y = gender_known['gender']\n",
@@ -412,13 +602,74 @@
     "\n",
     "X_train, X_test, y_train, y_test = train_test_split(X, y_encoded, test_size=0.2, random_state=42)\n",
     "rf_cl = RandomForestClassifier(n_estimators=100, random_state=42)\n",
-    "rf_cl.fit(X_train, y_train)"
+    "rf_cl.fit(X_train, y_train)\n",
+    "print('훈련 스코어:', rf_cl.score(X_train, y_train))\n",
+    "print('테스트 스코어:', rf_cl.score(X_test, y_test))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\kwj\\AppData\\Local\\Temp\\ipykernel_7624\\1459741092.py:23: SettingWithCopyWarning: \n",
+      "A value is trying to be set on a copy of a slice from a DataFrame.\n",
+      "Try using .loc[row_indexer,col_indexer] = value instead\n",
+      "\n",
+      "See the caveats in the documentation: https://pandas.pydata.org/pandas-docs/stable/user_guide/indexing.html#returning-a-view-versus-a-copy\n",
+      "  X['gender'] = le.fit_transform(X['gender'])\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "훈련 스코어: 0.88778493277057\n",
+      "테스트 스코어: 0.19706107550153218\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from sklearn.ensemble import RandomForestRegressor\n",
+    "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.preprocessing import LabelEncoder\n",
+    "\n",
+    "\n",
+    "gender_known = df[df['bd'] != 0]\n",
+    "gender_unknown = df[df['bd']==0].copy()  # 경고 방지를 위해 복사본 사용\n",
+    "\n",
+    "\n",
+    "features = ['city', 'gender', 'registered_via',\n",
+    "       'registration_init_time', 'is_churn', 'is_back', 'payment_plan_sum',\n",
+    "       'plan_list_price', 'actual_amount_paid', 'discount_rate',\n",
+    "       'is_auto_renew', 'membership_expire_date', 'is_cancel',\n",
+    "       'transaction_count', 'num_25', 'num_50', 'num_75', 'num_985', 'num_100',\n",
+    "       'num_unq', 'total_secs', 'log_start', 'log_end']\n",
+    "\n",
+    "X = gender_known[features]\n",
+    "y = gender_known['bd']\n",
+    "\n",
+    "\n",
+    "le = LabelEncoder()\n",
+    "X['gender'] = le.fit_transform(X['gender'])\n",
+    "\n",
+    "\n",
+    "X_train, X_test, y_train, y_test = train_test_split(X, y_encoded, test_size=0.2, random_state=42)\n",
+    "rf_cl = RandomForestRegressor(n_estimators=100, random_state=42)\n",
+    "rf_cl.fit(X_train, y_train)\n",
+    "print('훈련 스코어:', rf_cl.score(X_train, y_train))\n",
+    "print('테스트 스코어:', rf_cl.score(X_test, y_test))"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pystudy_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -432,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
