--- a/kimujung/tree.ipynb
+++ b/kimujung/tree.ipynb
@@ -987,9 +987,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['rf_model_over.joblib']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "dump(rf_clf_over, \"rf_model_over.joblib\") "
    ]
