--- a/kimujung/tmp_1.ipynb
+++ b/kimujung/tmp_1.ipynb
@@ -669,7 +669,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "pystudy_env",
    "language": "python",
    "name": "python3"
   },
@@ -683,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.11"
+   "version": "3.12.8"
   }
  },
  "nbformat": 4,
