모델선정 업데이트

--- a/final_model.ipynb
+++ b/final_model.ipynb
@@ -1222,132 +1222,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\USER\\anaconda3\\envs\\pystudy_env\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "[LightGBM] [Info] Number of positive: 49979, number of negative: 235042\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.006160 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
+      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.013288 seconds.\n",
+      "You can set `force_col_wise=true` to remove the overhead.\n",
       "[LightGBM] [Info] Total Bins 3708\n",
       "[LightGBM] [Info] Number of data points in the train set: 285021, number of used features: 20\n",
       "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.175352 -> initscore=-1.548161\n",
-      "[LightGBM] [Info] Start training from score -1.548161\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\USER\\anaconda3\\envs\\pystudy_env\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Info] Number of positive: 49979, number of negative: 235042\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.006016 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 3698\n",
-      "[LightGBM] [Info] Number of data points in the train set: 285021, number of used features: 20\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.175352 -> initscore=-1.548161\n",
-      "[LightGBM] [Info] Start training from score -1.548161\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\USER\\anaconda3\\envs\\pystudy_env\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Info] Number of positive: 49980, number of negative: 235042\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.005446 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 3693\n",
-      "[LightGBM] [Info] Number of data points in the train set: 285022, number of used features: 20\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.175355 -> initscore=-1.548141\n",
-      "[LightGBM] [Info] Start training from score -1.548141\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\USER\\anaconda3\\envs\\pystudy_env\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Info] Number of positive: 49979, number of negative: 235043\n",
-      "[LightGBM] [Info] Auto-choosing row-wise multi-threading, the overhead of testing was 0.005694 seconds.\n",
-      "You can set `force_row_wise=true` to remove the overhead.\n",
-      "And if memory is not enough, you can set `force_col_wise=true`.\n",
-      "[LightGBM] [Info] Total Bins 3686\n",
-      "[LightGBM] [Info] Number of data points in the train set: 285022, number of used features: 20\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.175351 -> initscore=-1.548166\n",
-      "[LightGBM] [Info] Start training from score -1.548166\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\Users\\USER\\anaconda3\\envs\\pystudy_env\\Lib\\site-packages\\sklearn\\utils\\deprecation.py:151: FutureWarning: 'force_all_finite' was renamed to 'ensure_all_finite' in 1.6 and will be removed in 1.8.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[LightGBM] [Info] Number of positive: 49979, number of negative: 235043\n",
-      "[LightGBM] [Info] Auto-choosing col-wise multi-threading, the overhead of testing was 0.008204 seconds.\n",
-      "You can set `force_col_wise=true` to remove the overhead.\n",
-      "[LightGBM] [Info] Total Bins 3678\n",
-      "[LightGBM] [Info] Number of data points in the train set: 285022, number of used features: 20\n",
-      "[LightGBM] [Info] [binary:BoostFromScore]: pavg=0.175351 -> initscore=-1.548166\n",
-      "[LightGBM] [Info] Start training from score -1.548166\n",
-      "[LightGBM] [Warning] No further splits with positive gain, best gain: -inf\n",
-      "LightGBM 정확도: 0.801\n",
-      "LightGBM 정밀도: 0.36\n",
-      "LightGBM 재현율: 0.408\n"
+      "[LightGBM] [Info] Start training from score -1.548161\n"
      ]
     }
    ],
    "source": [
     "stratified_kfold = StratifiedKFold(n_splits=5)\n",
-    "lgbm_clf = lgb.LGBMClassifier(learning_rate= 0.2, max_depth= 7, n_estimators= 150, random_state=42)\n",
+    "lgbm_clf = lgb.LGBMClassifier(learning_rate= 0.3, max_depth= 20, n_estimators= 2000, random_state=42)\n",
     "\n",
     "lgbm_accuracy = []\n",
     "lgbm_precision = []\n",
