--- a/kimujung/tmp_1.ipynb
+++ b/kimujung/tmp_1.ipynb
@@ -979,7 +979,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "pystudy_env",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
@@ -993,7 +993,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.8"
+   "version": "3.11.11"
   }
  },
  "nbformat": 4,
